--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "0g": "^0.4.2",
-    "pnpm": "^10.6.5"
+    "pnpm": "^10.6.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
