--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "pnpm": "^10.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4"
   }
 }
