--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "0g": "^0.4.2",
+    "clsx": "^2.1.1",
     "pnpm": "^10.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
