--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.0.17",
+    "@tanstack/react-query": "^5.75.5",
     "axios": "^1.8.4",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
